# monster-step-viewer

./: AGENTS.md  Cargo.toml  README.md  index.html
assets/: sw.js
assets/shaders/: viewer_material.wgsl
docs/plans/: 2026-03-14-clipping-planes-shading-modes-design.md  2026-03-14-clipping-shading-implementation.md
examples/: inspect_loaded_step.rs  parse_test.rs
src/: browser.rs  icons.rs  lib.rs  main.rs  persistence.rs  scene.rs  state.rs  step_loader.rs  ui.rs  viewer_material.rs
src/step_loader/: mesh_utils.rs  parsing.rs  transform.rs
step-files/: ap224_995277945.stp  boxy_with_surfacetex.stp
