[package]
name = "monster-step-viewer"
version = "0.1.0"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2024"
rust-version = "1.89"

[[bin]]
name = "mstpv"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bevy = { version = "0.18", default-features = false, features = [
    "3d_bevy_render",
    "default_app",
    "default_platform",
    "picking",
] }
bevy_egui = "0.39"
bevy_panorbit_camera = "0.34"
futures-lite = "2"
env_logger = "0.11"
glam = "0.32"
log = "0.4"
parking_lot = "0.12"
rayon = "1"
rfd = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
ehttp = "0.5"
monstertruck = { version = "0.1", features = ["step", "meshing", "solid", "modeling"] }

[patch.crates-io]
monstertruck = { path = "../truck/monstertruck" }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
